<resources>
    <string name="app_name">Pattern View</string>
    <string name="row_height_shrink">shrink row height</string>
    <string name="row_height_grow">grow row height</string>
    <string name="image_up">image up</string>
    <string name="image_down">image down</string>
    <string name="image_zoom_in">zoom In</string>
    <string name="image_zoom_out">zoom Out</string>
    <string name="image_crop">original zoom</string>
    <string name="image_fit">image fit</string>
    <string name="row_up">row Up</string>
    <string name="row_down">row Down</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="select_picture">select picture</string>
    <string name="thumbnail">thumbnail</string>
    <string name="name">name</string>
    <string name="uri">uri</string>
    <string name="open_image">open image</string>
    <string name="recent_pattern_list">recent pattern list</string>
    <string name="delete">delete</string>
    <string name="open">open</string>
    <string name="select_action">select the action</string>
    <string name="full_image">full image</string>
</resources>
